# AsthoBin

./: .dockerignore  .env.example  .gitignore  .prettierrc  Cargo.toml  README.md  build.rs  diesel.toml  eslint.config.mjs  eslint.config.mts  package.json  postcss.config.mts  rinja.toml  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.mts
.github/workflows/: generate-changelog.yml  generate-executable.yml  mirror-github-to-gitlab.yml  push-docker-image.yml  rust-lint-and-format-check.yml
docker/: Dockerfile  docker-compose.yml
frontend/css/: index.css
frontend/templates/: code.html  index.html
frontend/ts/: code.ts  index.ts  languages_extension.ts
migrations/2022-04-21-160333_asthobin/: down.sql  up.sql
migrations/2025-11-22-140403_add_language_to_asthobin/: down.sql  up.sql
src/: api_error.rs  config.rs  lib.rs  main.rs  middlewares.rs
src/database/: mod.rs  models.rs  mysql.rs  postgres.rs  schema.rs
src/router/: mod.rs  router.rs  router_register.rs
src/router/routes/: document.rs  index.rs  mod.rs  new.rs
src/routes/: document.rs  index.rs  mod.rs  new.rs
src/task/: delete.rs
src/tasks/: delete.rs
src/util/: logger.rs  mod.rs  utils.rs
src/utils/: logger.rs  mod.rs  rustls.rs  syntect.rs
static/assets/css/: index.css
static/assets/javascript/: code.js  index.js
templates/: code.html  index.html
