[package]
name = "asthobin"
version = "0.2.1"
authors = ["Asthowen<contact@asthowen.fr>"]
edition = "2024"
description = "AsthoBin is a simple website to share pieces of code with a URL, written in Rust."
repository = "https://github.com/Asthowen/AsthoBin"
readme = "README.md"
license = "GPL-3.0"
keywords = ["asthobin", "paste", "rust"]
publish = false

[profile.release]
codegen-units = 1
strip = true
lto = true

[build-dependencies]
static-files = "0.3.1"
dotenvy = "0.15.7"

[dependencies]
diesel-async = { version = "0.7.4", features = ["postgres", "bb8", "async-connection-wrapper", "migrations"] }
actix-web-static-files = { version = "4.1.1", default-features = false, features = ["static-files-03"] }
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt", "fs"] }
confik = { version = "0.15.1", default-features = false, features = ["env"] }
diesel_migrations = "2.3.1"
actix-governor = "0.10.0"
static-files = "0.3.1"
serde_json = "1.0.146"
env_logger = "0.11.8"
actix-files = "0.6.9"
actix-cors = "0.7.1"
actix-web = "4.12.1"
thiserror = "2.0.17"
dotenvy = "0.15.7"
chrono = "0.4.42"
syntect = "5.3.0"
serde = "1.0.228"
dashmap = "6.1.0"
askama = "0.15.0"
diesel = "2.3.5"
log = "0.4.29"
rand = "0.9.2"